--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
     <java.version>11</java.version>
     <apt.version>1.1.3</apt.version>
     <lombok.version>1.18.4</lombok.version>
@@ -107,7 +106,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
+        <version>Greenwich.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
