--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
       port: 9042
 
 website:
+  maxSubContentItems: 5
+  maxSubReviewItems: 5
+  maxSubReplyItems: 5
   cassandra:
     cqlCreateKeySpace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
 
