--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
           jwk-set-uri: http://localhost:9093/.well-known/jwks.json
 
 website:
+  maxSubContentItems: 5
+  maxSubReviewItems: 5
+  maxSubReplyItems: 5
   cassandra:
     cqlCreateKeySpace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
   storage:
