--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,19 +1,20 @@
 version: "3.7"
 services:
-  session-redis:
-    image: redis:latest
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: "0.1"
-          memory: 50M
-      restart_policy:
-        condition: on-failure
-    ports:
-      - "6379:6379"
-    networks:
-      - inner
+
+#  session-redis:
+#    image: redis:latest
+#    deploy:
+#      replicas: 1
+#      resources:
+#        limits:
+#          cpus: "0.1"
+#          memory: 50M
+#      restart_policy:
+#        condition: on-failure
+#    ports:
+#      - "6379:6379"
+#    networks:
+#      - inner
 
   db-cassandra:
     image: cassandra:latest
@@ -23,6 +24,7 @@ services:
       - /home/flowant/work/cassandra_data:/var/lib/cassandra
     networks:
       - inner
+
 networks:
   inner:
 
