--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "i": "^0.3.6",
     "jquery": "^3.3.1",
     "jquery.easing": "^1.4.1",
     "js-joda": "^1.9.2",
     "js-joda-timezone": "^2.0.1",
     "ngx-logger": "^3.3.11",
     "npm": "^6.7.0",
+    "parse-link-header": "^1.0.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
