--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
+    "@angular/compiler": "^7.2.7",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -27,8 +27,9 @@
     "jquery.easing": "^1.4.1",
     "js-joda": "^1.9.2",
     "js-joda-timezone": "^2.0.1",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "ngx-logger": "^3.3.11",
-    "npm": "^6.7.0",
+    "npm": "^6.8.0",
     "parse-link-header": "^1.0.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
