--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,10 +16,13 @@ spring:
           jwk-set-uri: http://localhost:9093/.well-known/jwks.json
 
 website:
+  identity: f1b8dba2-44a4-11e9-944f-99e89c6a8c79
   maxSubContentItems: 12
   maxSubReviewItems: 5
   maxSubReplyItems: 5
   ttlNotifications: 2592000000 # 86400 * 30 * 1000, 30 days in milliseconds
+  contentContainerIds:
+    recipe: "56a1cd50-3c77-11e9-bf26-d571c84212ed"
   cassandra:
     cqlCreateKeySpace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
   storage:
