--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "ngx-logger": "^3.3.11",
     "npm": "^6.9.0",
+    "numeral": "^2.0.6",
     "parse-link-header": "^1.0.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
