--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -48,7 +48,7 @@ website:
       - refresh_token
       - client_credentials
     authorities:
-      - auth
+      - MEMBER
     accessTokenValiditySeconds: 3600
     refreshTokenValiditySeconds: 3600
     scopes:
