--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,5 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
@@ -28,10 +30,11 @@
 /dist
 /tmp
 /out-tsc
+# Only exists if Bazel was run
+/bazel-out
 
 # dependencies
 /node_modules
-node/
 
 # profiling files
 chrome-profiler-events.json
