--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,19 +1,18 @@
 server:
-  port: 9092
-  address: 127.0.0.1
+  port: 80
 
 spring:
   profiles:
     active: test
   data:
     cassandra:
-      contactPoints: 127.0.0.1
+      contactPoints: cassandra
       port: 9042
   security:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:9093/uaa/.well-known/jwks.json
+          jwk-set-uri: http://auth.flowant.org/uaa/.well-known/jwks.json
 
 website:
   identity: f1b8dba2-44a4-11e9-944f-99e89c6a8c79
@@ -24,14 +23,14 @@ website:
   contentContainerIds:
     recipe: "56a1cd50-3c77-11e9-bf26-d571c84212ed"
   oauth2Server:
-    address: 127.0.0.1
-    port: 9093
+    address: auth.flowant.org
+    port: 80
     clientId: ${OAUTH2_CLIENT_ID}
     clientSecret: ${OAUTH2_CLIENT_PASSWORD}
   cassandra:
     cqlCreateKeySpace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
   storage:
-    root: /home/flowant/work/storage
+    root: storage
 
 ---
 spring:
