--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9091
+  port: 80
 
 spring:
   profiles:
@@ -8,105 +8,105 @@ spring:
     gateway:
       routes:
       - id: website
-        uri: http://127.0.0.1:9092/website
+        uri: http://backend.flowant.org/website
         predicates:
         - Path=/api/website/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: subitem
-        uri: http://127.0.0.1:9092/subitem
+        uri: http://backend.flowant.org/subitem
         predicates:
         - Path=/api/subitem/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: search
-        uri: http://127.0.0.1:9092/search
+        uri: http://backend.flowant.org/search
         predicates:
         - Path=/api/search/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: content
-        uri: http://127.0.0.1:9092/content
+        uri: http://backend.flowant.org/content
         predicates:
         - Path=/api/content/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: review
-        uri: http://127.0.0.1:9092/review
+        uri: http://backend.flowant.org/review
         predicates:
         - Path=/api/review/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: reply
-        uri: http://127.0.0.1:9092/reply
+        uri: http://backend.flowant.org/reply
         predicates:
         - Path=/api/reply/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: content_rpt
-        uri: http://127.0.0.1:9092/content_rpt
+        uri: http://backend.flowant.org/content_rpt
         predicates:
         - Path=/api/content_rpt/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: review_rpt
-        uri: http://127.0.0.1:9092/review_rpt
+        uri: http://backend.flowant.org/review_rpt
         predicates:
         - Path=/api/review_rpt/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: reply_rpt
-        uri: http://127.0.0.1:9092/reply_rpt
+        uri: http://backend.flowant.org/reply_rpt
         predicates:
         - Path=/api/reply_rpt/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: files
-        uri: http://127.0.0.1:9092/files
+        uri: http://backend.flowant.org/files
         predicates:
         - Path=/api/files/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: message
-        uri: http://127.0.0.1:9092/message
+        uri: http://backend.flowant.org/message
         predicates:
         - Path=/api/message/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: notification
-        uri: http://127.0.0.1:9092/notification
+        uri: http://backend.flowant.org/notification
         predicates:
         - Path=/api/notification/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: relation
-        uri: http://127.0.0.1:9092/relation
+        uri: http://backend.flowant.org/relation
         predicates:
         - Path=/api/relation/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: user
-        uri: http://127.0.0.1:9092/user
+        uri: http://backend.flowant.org/user
         predicates:
         - Path=/api/user/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       - id: oauth
-        uri: http://127.0.0.1:9093/uaa/oauth/token
+        uri: http://auth.flowant.org/uaa/oauth/token
         predicates:
         - Path=/api/oauth/token/**
         filters:
@@ -114,7 +114,7 @@ spring:
 
 website:
   cors:
-    allowedOrigins: "http://localhost:9090"
+    allowedOrigins: "http://www.flowant.org"
 
 ---
 spring:
