--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>11</java.version>
     <apt.version>1.1.3</apt.version>
-    <lombok.version>1.18.4</lombok.version>
+    <lombok.version>1.18.6</lombok.version>
+    <dockerfile-maven-version>1.4.10</dockerfile-maven-version>
   </properties>
 
   <dependencies>
