--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
 
   auth:
     image: flowant/authserver:0.0.1
+    build:
+      context: ./authserver
     ports:
       - "80"
       - "443"
@@ -26,6 +28,8 @@ services:
 
   backend:
     image: flowant/backend:0.0.1
+    build:
+      context: ./backend
     ports:
       - "80"
       - "443"
@@ -40,6 +44,8 @@ services:
 
   gateway:
     image: flowant/gateway:0.0.1
+    build:
+      context: ./gateway
     ports:
       - "9091:80"
       - "443"
@@ -51,6 +57,8 @@ services:
 
   frontend:
     image: flowant/frontend:0.0.1
+    build:
+      context: ./frontend
     ports:
       - "80:80"
       - "443:443"
