--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
-  port: 80
+  port: 443
+  ssl:
+    key-store-type: PKCS12
+    key-store: keystore/ssl_certificate.p12
+    key-store-password: ${SSL_KEYSTORE_STOREPASS}
+    key-alias: website_ssl
   servlet:
     context-path: /uaa
 
