apply ssl to authserver and backend

--- a/authserver/Dockerfile
+++ b/authserver/Dockerfile
@@ -4,14 +4,14 @@ WORKDIR /usr/share/website/authserver
 
 COPY ./wait-for-it.sh /usr/share/website/wait-for-it.sh
 
-# spring boot executable jar
+RUN chmod +x /usr/share/website/wait-for-it.sh
+
 COPY target/*-exec.jar /usr/share/website/authserver/authserver-exec.jar
 
-# Auth Server keystore for JWT authentication
-COPY keystore/keystore.jks /usr/share/website/authserver/keystore/keystore.jks
+# Keystore for JWT authentication and SSL
+COPY keystore /usr/share/website/authserver/keystore
 
-# Make port 80, 443 available to the world outside this container
-EXPOSE 80
+# Make port 443 available to the world outside this container
 EXPOSE 443
 
 ENTRYPOINT ["/usr/share/website/wait-for-it.sh", "cassandra:9042", "--timeout=0", "--", "java", "-jar", "/usr/share/website/authserver/authserver-exec.jar"]
