--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
-  port: 80
+  port: 443
+  ssl:
+    key-store-type: PKCS12
+    key-store: keystore/ssl_certificate.p12
+    key-store-password: ${SSL_KEYSTORE_STOREPASS}
+    key-alias: website_ssl
 
 spring:
   profiles:
@@ -12,7 +17,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://auth.flowant.org/uaa/.well-known/jwks.json
+          jwk-set-uri: https://auth.flowant.org/uaa/.well-known/jwks.json
 
 website:
   identity: f1b8dba2-44a4-11e9-944f-99e89c6a8c79
@@ -24,7 +29,7 @@ website:
     recipe: "56a1cd50-3c77-11e9-bf26-d571c84212ed"
   oauth2Server:
     address: auth.flowant.org
-    port: 80
+    port: 443
     clientId: ${OAUTH2_CLIENT_ID}
     clientSecret: ${OAUTH2_CLIENT_PASSWORD}
   cassandra:
