--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -5,8 +5,10 @@ WORKDIR /usr/share/website/gateway
 # spring boot executable jar
 COPY target/*-exec.jar /usr/share/website/gateway/gateway-exec.jar
 
-# Make port 80, 443 available to the world outside this container
-EXPOSE 80
+# SSL keystore
+COPY keystore /usr/share/website/gateway/keystore
+
+# Make port 443 available to the world outside this container
 EXPOSE 443
 
 ENTRYPOINT ["/usr/bin/java", "-jar", "/usr/share/website/gateway/gateway-exec.jar"]
