--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -25,29 +25,32 @@
     </dependency>
   </dependencies>
 
-<!--
   <build>
     <plugins>
       <plugin>
-        <groupId>com.spotify</groupId>
-        <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>${dockerfile-maven-version}</version>
+        <artifactId>maven-resources-plugin</artifactId>
         <executions>
           <execution>
-            <id>default</id>
+            <id>copy-keystore</id>
+            <phase>validate</phase>
             <goals>
-              <goal>build</goal>
-              <goal>push</goal>
+              <goal>copy-resources</goal>
             </goals>
+            <configuration>
+              <outputDirectory>${basedir}/keystore</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.parent.basedir}/keystore</directory>
+                  <includes>
+                    <include>ssl_certificate.p12</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
           </execution>
         </executions>
-        <configuration>
-          <repository>flowant/gateway</repository>
-          <tag>${project.version}</tag>
-        </configuration>
       </plugin>
     </plugins>
   </build>
--->
 
 </project>
