--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,4 +9,10 @@ RUN npm install && \
 
 FROM nginx:alpine
 
+VOLUME /etc/keystore
+
+COPY ./nginx-default.conf /etc/nginx/conf.d/default.conf
+
 COPY --from=builder /app/dist/* /usr/share/nginx/html/
+
+EXPOSE 443
