--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ RUN chmod +x /usr/share/website/wait-for-it.sh
 
 COPY target/*-exec.jar /usr/share/website/backend/backend-exec.jar
 
-# SSL
+# SSL keystore
 COPY keystore /usr/share/website/backend/keystore
 
 RUN mkdir -p /usr/share/website/backend/storage
