--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,6 @@ services:
     build:
       context: ./authserver
     ports:
-      - "80"
       - "443"
     env_file:
       - /home/flowant/work/env_file.txt
@@ -31,7 +30,6 @@ services:
     build:
       context: ./backend
     ports:
-      - "80"
       - "443"
     env_file:
       - /home/flowant/work/env_file.txt
@@ -47,11 +45,11 @@ services:
     build:
       context: ./gateway
     ports:
-      - "9091:80"
-      - "443"
+      - "8443:443"
+    env_file:
+      - /home/flowant/work/env_file.txt
     networks:
       website:
-        ipv4_address: 172.28.1.1
         aliases:
          - gateway.flowant.org
 
@@ -60,7 +58,6 @@ services:
     build:
       context: ./frontend
     ports:
-      - "80:80"
       - "443:443"
     networks:
       website:
@@ -69,9 +66,3 @@ services:
 
 networks:
   website:
-    ipam:
-      driver: default
-      config:
-      - subnet: 172.28.0.0/16
-
-
