--- a/docker-compose-maven.yml
+++ b/docker-compose-maven.yml
@@ -8,7 +8,7 @@ services:
       - "9042"
       - "7000"
     volumes:
-      - /home/flowant/cassandra_data:/var/lib/cassandra
+      - ~/site/cassandra_data:/var/lib/cassandra
     networks:
       - maven-build
 
@@ -16,7 +16,7 @@ services:
     build:
       context: .
     env_file:
-      - /home/flowant/work/env_file.txt
+      - ~/site/env_file.txt
     volumes:
       - .:/usr/share/website
     networks:
