--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "9042"
       - "7000"
     volumes:
-      - /home/flowant/cassandra_data:/var/lib/cassandra
+      - ~/site/cassandra_data:/var/lib/cassandra
     networks:
       - website
 
@@ -19,7 +19,7 @@ services:
     ports:
       - "443"
     env_file:
-      - /home/flowant/work/env_file.txt
+      - ~/site/env_file.txt
     networks:
       website:
         aliases:
@@ -32,9 +32,9 @@ services:
     ports:
       - "443"
     env_file:
-      - /home/flowant/work/env_file.txt
+      - ~/site/env_file.txt
     volumes:
-      - /home/flowant/storage:/usr/share/website/backend/storage
+      - ~/site/storage:/usr/share/website/backend/storage
     networks:
       website:
         aliases:
@@ -47,7 +47,7 @@ services:
     ports:
       - "8443:443"
     env_file:
-      - /home/flowant/work/env_file.txt
+      - ~/site/env_file.txt
     networks:
       website:
         aliases:
@@ -59,6 +59,8 @@ services:
       context: ./frontend
     ports:
       - "443:443"
+    volumes:
+      - ~/site/keystore:/etc/keystore
     networks:
       website:
         aliases:
