spring based projects are under the production mode

--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -10,9 +10,11 @@ server:
 
 spring:
   profiles:
-    active: test
+    active: prod
   data:
     cassandra:
+      keyspace-name: website
+      schema-action: CREATE_IF_NOT_EXISTS
       contactPoints: cassandra
       port: 9042
 
@@ -79,10 +81,6 @@ website:
 ---
 spring:
   profiles: prod
-  data:
-    cassandra:
-      keyspace-name: backend_prod
-      schema-action: CREATE_IF_NOT_EXISTS
 
 logging:
   config: classpath:log4j2-spring-prod.xml
@@ -90,11 +88,6 @@ logging:
 ---
 spring:
   profiles: test
-  data:
-    cassandra:
-      keyspace-name: backend_test
-      schema-action: CREATE_IF_NOT_EXISTS
-#      schema-action: recreate
 
 logging:
   config: classpath:log4j2-spring-test.xml
