--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   profiles:
-    active: test
+    active: prod
   data:
     cassandra:
+      keyspace-name: website
+      schema-action: CREATE_IF_NOT_EXISTS
       contactPoints: cassandra
       port: 9042
 
@@ -18,10 +20,6 @@ website:
 ---
 spring:
   profiles: prod
-  data:
-    cassandra:
-      keyspace-name: backend_prod
-      schema-action: CREATE_IF_NOT_EXISTS
 
 logging:
   config: classpath:log4j2-spring-prod.xml
@@ -29,11 +27,6 @@ logging:
 ---
 spring:
   profiles: test
-  data:
-    cassandra:
-      keyspace-name: backend_test
-      schema-action: CREATE_IF_NOT_EXISTS
-#      schema-action: recreate # should be recreated only if models are changed.
 
 logging:
   config: classpath:log4j2-spring-test.xml
