--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,14 @@
-FROM node:10 AS builder
+FROM node:10-alpine AS builder
 
-WORKDIR /app
+COPY package.json package-lock.json ./
+
+RUN npm ci && mkdir /ng-app && mv ./node_modules ./ng-app
+
+WORKDIR /ng-app
 
 COPY . .
 
-RUN npm install && \
-    npm run build
+RUN $(npm bin)/ng build --prod --output-path=dist
 
 FROM nginx:alpine
 
@@ -13,6 +16,8 @@ VOLUME /etc/keystore
 
 COPY ./nginx-default.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /app/dist/* /usr/share/nginx/html/
+RUN rm -rf /usr/share/nginx/html/*
+
+COPY --from=builder /ng-app/dist /usr/share/nginx/html
 
 EXPOSE 443
