working on deployment angular

--- a/frontend/nginx-default.conf
+++ b/frontend/nginx-default.conf
@@ -1,3 +1,13 @@
+
+server {
+      listen        80;
+      server_name   www.flowant.org;
+      access_log    off;
+      error_log     off;
+      # Redirect ALL http requests to https
+      return        301 https://$server_name$request_uri;
+}
+
 server {
     listen              443 ssl;
     server_name         www.flowant.org;
@@ -17,6 +27,8 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        # Angular requires fallback to index.html
+        try_files $uri $uri/ /index.html;
     }
 
     #error_page  404              /404.html;
