--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,50 @@
-language: java
+matrix:
+  include:
+    # All Maven based project tests except for Frontend
+    - language: java
 
-jdk:
-  - openjdk11
+      jdk:
+        - openjdk11
 
-cache:
-  directories:
-    - $HOME/.m2
+      cache:
+        directories:
+          - $HOME/.m2
 
-services:
-  - cassandra
+      services:
+        - cassandra
 
-addons:
-  hosts:
-    - cassandra
-    - www.flowant.org
-    - gateway.flowant.org
-    - backend.flowant.org
-    - auth.flowant.org
+      addons:
+        hosts:
+          - cassandra
+          - www.flowant.org
+          - gateway.flowant.org
+          - backend.flowant.org
+          - auth.flowant.org
 
-script: "mvn clean test"
+      script: "mvn clean test"
+
+    # Frontend test
+    - before_script:
+      - "cd frontend"
+
+      language: node_js
+
+      node_js:
+        - "10"
+
+      addons:
+        apt:
+          sources:
+            - google-chrome
+          packages:
+            - google-chrome-stable
+
+      cache:
+        directories:
+          - ./node_modules
+
+      install:
+        - npm install
+
+      script:
+        - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
