working on deployment

--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -116,6 +116,9 @@
               <resources>
                 <resource>
                   <directory>${project.parent.basedir}/scripts</directory>
+                  <includes>
+                    <include>wait-for-it.sh</include>
+                  </includes>
                 </resource>
               </resources>
             </configuration>
