--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,9 @@
               <resources>
                 <resource>
                   <directory>${project.parent.basedir}/scripts</directory>
+                  <includes>
+                    <include>wait-for-it.sh</include>
+                  </includes>
                 </resource>
               </resources>
             </configuration>
