--- a/frontend/nginx-default.conf
+++ b/frontend/nginx-default.conf
@@ -1,11 +1,11 @@
 
 server {
-      listen        80;
-      server_name   www.flowant.org;
-      access_log    off;
-      error_log     off;
-      # Redirect ALL http requests to https
-      return        301 https://$server_name$request_uri;
+    listen        80;
+    server_name   www.flowant.org;
+    access_log    off;
+    error_log     off;
+    # Redirect ALL http requests to https
+    return        301 https://$server_name$request_uri;
 }
 
 server {
@@ -15,6 +15,12 @@ server {
     ssl_certificate_key /etc/keystore/private.key;
     # ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     # ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    gzip on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_types text/css application/javascript;
+    gzip_vary on;
 
     # Below configurations are from docker-nginx/mainline/alpine/nginx.vh.default.conf
 
